--- a/theme.toml
+++ b/theme.toml
@@ -39,8 +39,8 @@ features = ["page builder", "widgets", "themes", "search", "research publication
             "blog", "create courses", "talks", "events", "slides", "gallery", "contact form"]
 
 [author]
-  name = "George Cushen"
-  homepage = "https://georgecushen.com"
+  name = "David Aparicio"
+  homepage = "https://davidaparicio.gitlab.io/website/"
 
 # If porting an existing theme
 [original]
