--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,16 @@
-image: monachus/hugo
+image: registry.gitlab.com/pages/hugo:latest
 
 pages:
-    script:
-    - hugo
-    artifacts:
-        paths:
-        - public
-    only:
-    - master
+  script:
+  - hugo
+  artifacts:
+    paths:
+    - public
+  only:
+  - master
+  
+test:
+  script:
+  - hugo
+  except:
+  - master
