--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,23 @@
+# All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
 image: registry.gitlab.com/pages/hugo:latest
 
-pages:
-  script:
-  - hugo
-  artifacts:
-    paths:
-    - public
-  only:
-  - master
-  
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+  HUGO_VERSION: "0.74.3"
+  HUGO_ENABLEGITINFO: "true"
+  HUGO_ENV: "production"
+
 test:
   script:
   - hugo
   except:
+  - master
+
+pages:
+  script:
+  - hugo --gc --minify #-b $URL
+  artifacts:
+    paths:
+    - public
+  only:
   - master
