--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
 # All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
-#image: registry.gitlab.com/pages/hugo:latest
+image: registry.gitlab.com/pages/hugo:latest
 # https://discourse.gohugo.io/t/hugo-starter-error/28550/2
-image: klakegg/hugo:0.74.3-ext-alpine
 #image: registry.gitlab.com/pages/hugo/hugo_extended:latest
 
 variables:
-  #GIT_SUBMODULE_STRATEGY: recursive
+  GIT_SUBMODULE_STRATEGY: recursive
   #HUGO_VERSION: "0.75.1"
   HUGO_ENABLEGITINFO: "true"
   #HUGO_ENV: "production"
@@ -21,7 +20,7 @@ pages:
   script:
   #https://wowchemy.com/docs/install-locally/
   #- hugo mod get github.com/wowchemy/wowchemy-hugo-modules/wowchemy/@master
-  - server #--gc --minify #-b $URL
+  - hugo #--gc --minify #-b $URL
   artifacts:
     paths:
     - public
