--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,12 @@
-# All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
-image: klakegg/hugo:0.75.1-ext-alpine
-# https://discourse.gohugo.io/t/hugo-starter-error/28550/2
-#image: registry.gitlab.com/pages/hugo:latest
-#image: registry.gitlab.com/pages/hugo/hugo_extended:latest
+image:
+  name: klakegg/hugo:edge-ext-alpine
+  entrypoint: [""] #https://github.com/klakegg/docker-hugo/issues/13
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   #HUGO_VERSION: "0.75.1"
   HUGO_ENABLEGITINFO: "true"
   HUGO_ENV: "production"
-
-# test:
-#   script:
-#   - hugo
-#   except:
-#   - master
 
 pages:
   script:
@@ -24,3 +16,14 @@ pages:
     - public
   only:
   - master
+
+# test:
+#   script:
+#   - hugo
+#   except:
+#   - master
+
+# All available Hugo versions are listed here: https://gitlab.com/pages/hugo/container_registry
+# https://discourse.gohugo.io/t/hugo-starter-error/28550/2
+#image: registry.gitlab.com/pages/hugo:latest
+#image: registry.gitlab.com/pages/hugo/hugo_extended:latest
