--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,9 @@ services:
       - .:/src
     ports: [ "1313:1313", ]
     command:
-    - server --disableFastRender --i18n-warnings
+    - server --disableFastRender --i18n-warnings --bind 0.0.0.0 
 
+# https://gohugo.io/commands/hugo_server/
 # https://net-security.fr/system/deploiement-automatique-dhugo-avec-gitlab-docker/
 # https://gitlab.com/tzkuat/hugo-site/-/tree/master
 
