--- a/old/Dockerfile
+++ b/old/Dockerfile
@@ -1,14 +1,16 @@
 # https://oo.or.id/content/what-i-have-learned-building-static-site-100k-pages/
 # https://www.evzpav.com/post/deploy-hugo-blog-to-dokku/
 # ---- Hugo ----
-FROM klakegg/hugo:0.81.0 as hugo
+FROM klakegg/hugo:0.88.0-ext-alpine as hugo
 COPY . /src
 # build argument
-ARG GOOGLE_ANALYTICS_TAG
+ARG HUGO_ENV
+#ARG GOOGLE_ANALYTICS_TAG
 # then set to hugo format
-ENV HUGO_GoogleAnalytics=${GOOGLE_ANALYTICS_TAG}
+ENV HUGO_ENV=production
+#ENV HUGO_GoogleAnalytics=${GOOGLE_ANALYTICS_TAG}
 RUN hugo
 
 # ---- Nginx ----
-FROM nginx:1.19.8 as nginx
+FROM nginx:1.21.3 as nginx
 COPY --from=hugo /src/public/ /usr/share/nginx/html
