--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 /resources/
 public/
 /zbackup/
+
+# Created by https://www.toptal.com/developers/gitignore/api/python
+# Edit at https://www.toptal.com/developers/gitignore?templates=python
+
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
