✨ feat: add CleverCloud integration

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /resources/
 public/
 /zbackup/
+.hugo_build.lock
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
