🐛 fix: [ERROR] There are no applications linked. You can add one with `clever link`

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 public/
 /zbackup/
 .hugo_build.lock
+.clever.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
