--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ public/
 /zbackup/
 .hugo_build.lock
 .clever.json
+.vps.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
