--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,20 +36,20 @@ coordinates:
 # office_hours:
 #   - 'Monday 10:00 to 13:00'
 #   - 'Wednesday 09:00 to 10:00'
-# appointment_url: 'https://calendly.com'
+appointment_url: 'https://cal.com/dadideo'
 contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
     link: 'https://twitter.com/dadideo'
+  - icon: keybase
+    icon_pack: fab
+    name: Chat on Keybase
+    link: 'https://keybase.io/dadideo'
   # - icon: skype
   #   icon_pack: fab
   #   name: Skype Me
   #   link: 'skype:echo123?call'
-  # - icon: keybase
-  #   icon_pack: fab
-  #   name: Chat on Keybase
-  #   link: 'https://keybase.io/'
   # - icon: comments
   #   icon_pack: fas
   #   name: Discuss on Forum
