--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,9 +4,10 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: David Aparicio # Website name
-baseurl: '' # Website URL
+baseurl: 'https://davidaparicio.gitlab.io/website/' # Website URL
 #'https://davidaparicio.gitlab.io/website/'
 #'https://github.com/davidaparicio/website'
+#'https://david.aparicio.eu'
 copyright: '© {year} David Aparicio' # Footer text, e.g. '© {year} Me'
 
 ############################
