✨ feat: baseURL changed https://twitter.com/c_chaudier/status/1582668742512762881 (https://docs.gitlab.com/ee/user/project/pages/getting_started_part_one.html)

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,7 +24,7 @@ jobs:
           extended: true # need the Hugo extended version to build SCSS/SASS.
 
       - name: Build
-        run: hugo --cleanDestinationDir --minify --baseURL https://davidaparicio.github.io/website/
+        run: hugo --cleanDestinationDir --minify --baseURL "" #https://davidaparicio.github.io
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
