🐛 fix: change baseurl, grep -rnw "website" . --exclude-dir=\.git

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,10 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: David Aparicio # Website name
-baseurl: '' # Website URL
-#'https://davidaparicio.gitlab.io/website/'
-#'https://github.com/davidaparicio/website'
-#'https://david.aparicio.eu'
+baseurl: '' # Website URL https://davidaparicio.gitlab.io/
 copyright: '© {year} David Aparicio' # Footer text, e.g. '© {year} Me'
 
 ############################
