⏪ revert: theme works Hugo last v0.121.2 (v0.91.2/v0.118.2)

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -145,6 +145,7 @@ map:
   api_key: ''
   zoom: 15
 marketing:
+  #analytics:
   google_analytics: ''
   google_tag_manager: ''
   google_site_verification: ''
@@ -156,3 +157,6 @@ cms:
 icon:
   pack:
     ai: true
+# services:
+#   googleAnalytics:
+#     id: 'G-XXXXXXXXXX'
