✨ feat: http-status-codes-map

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "static/wheel"]
 	path = static/wheel
 	url = https://github.com/davidaparicio/wheel-of-misfortune/
+[submodule "static/http-status"]
+	path = static/http-status
+	url = https://github.com/davidaparicio/http-status-codes-map
