--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ image:
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  #HUGO_VERSION: "v0.111.3"
+  HUGO_VERSION: "v0.121.2" #"v0.111.3" #"v0.121.2"
   HUGO_ENABLEGITINFO: "true"
   HUGO_ENV: "production"
   #BASE_URL: "https://davidaparicio.gitlab.io"
